# batsmt-ocaml

./: .gitignore  Cargo.toml  Makefile  README.md  batsmt.opam  test_gen_diamond.sh
src/: Batsmt.ml  Batsmt.mli  ctx.rs  dune  lib.rs  solver.rs
src/test-gen-diamond/: diamond16.expected  dune  test_gen_diamond.ml
