
[package]
name = "batsmt-stubs"
version = "0.1.0"
authors = ["Simon Cruanes"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]

ocaml = "0.5"
bit-set = "0.5.0"
fxhash = "0.2"
#batsmt = "*"
batsmt-core = { git="https://github.com/AestheticIntegration/batsmt",   rev="f72144ffb1aa14158f5883c6dd77e07e1cec1939" }
batsmt-cc = { git="https://github.com/AestheticIntegration/batsmt",     rev="f72144ffb1aa14158f5883c6dd77e07e1cec1939" }
batsmt-hast = { git="https://github.com/AestheticIntegration/batsmt",   rev="f72144ffb1aa14158f5883c6dd77e07e1cec1939" }
batsmt-theory = { git="https://github.com/AestheticIntegration/batsmt", rev="f72144ffb1aa14158f5883c6dd77e07e1cec1939" }
batsmt-solver = { git="https://github.com/AestheticIntegration/batsmt", rev="f72144ffb1aa14158f5883c6dd77e07e1cec1939" }
batsmt-pretty = { git="https://github.com/AestheticIntegration/batsmt", rev="f72144ffb1aa14158f5883c6dd77e07e1cec1939" }

[workspace]

