
[package]
name = "batsmt-stubs"
version = "0.1.0"
authors = ["Simon Cruanes"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]

ocaml = "0.5"
bit-set = "0.5.0"
fxhash = "0.2"
#batsmt = "*"
batsmt-core = { git="https://github.com/AestheticIntegration/batsmt"   }
batsmt-cc = { git="https://github.com/AestheticIntegration/batsmt"     }
batsmt-hast = { git="https://github.com/AestheticIntegration/batsmt"   }
batsmt-theory = { git="https://github.com/AestheticIntegration/batsmt" }
batsmt-solver = { git="https://github.com/AestheticIntegration/batsmt" }
batsmt-pretty = { git="https://github.com/AestheticIntegration/batsmt" }

[workspace]

