opam-version: "2.0"
version: "0.1"
author: "simon@imandra.ai"
synopsis: "OCaml bindings for batsmt, a SMT solver in rust"
maintainer: "simon@imandra.ai"
build: [
  ["dune" "build" "-p" name]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {build & >= "1.3.0" }
  "odoc" {with-doc}
  "conf-rust" {build}
]
tags: [ "SMT" "solver" "SAT" "rust" "bindings" ]
homepage: "https://github.com/aestheticintegration/batsmt-ocaml/"
dev-repo: "git+https://github.com/aestheticintegration/batsmt-ocaml.git"
bug-reports: "https://github.com/aestheticintegration/batsmt-ocaml/issues"
