
(executable
  (name test_gen_diamond)
  (libraries batsmt containers))

(rule
  (with-stdout-to diamond5.output (run ./test_gen_diamond.exe -n 5)))
(rule
  (with-stdout-to diamond16.output (run ./test_gen_diamond.exe -n 16)))

(alias
  (name runtest)
  (deps ./diamond5.expected)
  (action (diff diamond5.output diamond5.expected)))

(alias
  (name runtest)
  (deps ./diamond16.expected)
  (action (diff diamond16.output diamond16.expected)))
